examples/test/testpolicy18214.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18214
  namespace: namespace203
spec:
  podSelector:
    matchLabels:
      key29: value10
      key49: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value7
          key11: value0
          key41: value26
      podSelector:
        matchLabels:
          key1: value8
          key40: value5
